--- a/hello-world-frontend/static/characterList.css
+++ b/hello-world-frontend/static/characterList.css
@@ -10,7 +10,7 @@
   border: 1px solid #ccc;
   border-radius: 8px;
   padding: 16px;
-  width: 300px;
+  width: 200px;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -28,6 +28,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 0%;
   font-size: large;
+  margin-bottom: 2%;
 }
